Fixed overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     scroll-behavior: smooth;
+    overflow: hidden;
 }
 
 .header {
